test: Update RestExceptionHandlerUnitTest